Feat 698 update backend urls (#2)
* Update java SDK paths

* A couple of comments

* Api Tidy, Move integration tests to test harness

* Register URL update

* Adding getAudience to Rule

* circleci 2.0

* gpg sign fix